--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ maintainers = [
 
 # Define your main dependencies here
 dependencies = [
+    "opentelemetry-sdk>=1.14.0,<2.0.0",
     "langflow-base==0.1.1",
     "beautifulsoup4>=4.12.2,<5.0.0",
     "google-search-results>=2.4.1,<3.0.0",
